# mrm-crosswalk

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
paper/: audit.py  build.sh  main.tex
paper/bib/: references.bib
paper/sections/: 01_introduction.tex  02_crosswalk.tex  03_benchmark.tex  04_discussion.tex
results/: leaderboard.csv
src/mrm_crosswalk/: __init__.py  crosswalk.csv  score.py
tests/: test_score.py
